<resources>
    <string name="app_name">NoteLocal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_current_date">Открыть ежедневник\nна выбранную дату</string>
    <string name="to_notes">заметки</string>
    <string name="to_finance">финансы</string>
    <string name="to_mood">mood</string>
    <string name="to_wish_list">wish list</string>
    <string name="to_diary">дневник</string>
    <string name="to_habits">трекер</string>
    <string name="create_directory">создать папку</string>
    <string name="commit_note">Готово</string>
    <string name="create_note">создать заметку</string>
    <string name="input_directory_name">Введите название папки</string>
    <string name="directory_name_hint">Введите название папки</string>
    <string name="wish_name_hint">Введите название желания</string>
    <string name="directory_btn_commit">Подтвердить название</string>
    <string name="label_project">Проект</string>
    <string name="label_wish">Спискок желаний</string>
    <string name="label_back">Назад</string>
    <string name="label_notes">Заметки</string>
    <string name="label_create_note">Введите имя заметки</string>
    <string name="create_wish">Создать желание</string>
    <string name="wellcome">Добро пожаловать в ежедневник </string>
    <string name="star_ic_content_description">Иконка звезды для заметок</string>
    <string name="go_to_main_ic_content_description">Иконка кнопки к главному фрагменту</string>
    <string name="go_back_ic_content_description">Иконка кнопки назад</string>
    <string name="dir_name">Заметки / </string>
    <string name="diary">diary</string>
    <string name="time_management">time\nmanagement</string>
    <string name="text_plans">Планы — это мечты знающих людей.\nЭрнст Фейхтерслебен</string>
    <string name="text_registration">Регистрация</string>
    <string name="input_name">Введите имя</string>
    <string name="input_email">Введите адрес электронной почты</string>
    <string name="input_password">Придумайте пароль</string>
    <string name="create_acc">Создать аккаунт</string>
    <string name="message">На указанный почтовый адрес было\nвыслано письмо с подтверждением,\nзавершите регистрацию, подтвердив\nэлектронный адрес :)</string>
    <string name="btn_enter">Войти</string>
    <string name="label_enter">Войдите в приложение</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="btn_registration_text">Регистрация</string>
</resources>