<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fragment_main"
    tools:context=".fragments.MainFragment">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="35dp"
        android:dateTextAppearance="@style/CalendarCustomText"
        android:theme="@style/CalendarCustomView"
        android:weekDayTextAppearance="@style/CalendarCustomText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnToCurrentDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/bg_btn_current_date"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:fontFamily="@font/helvetica_light"
        android:gravity="start|center"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/to_current_date"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnToCurrentDate">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnToNotes"
                android:layout_marginEnd="48dp"
                style="@style/ButtonMainFragment"
                android:text="@string/to_notes" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnToFinance"
                android:layout_marginEnd="48dp"
                style="@style/ButtonMainFragment"
                android:text="@string/to_finance" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnToMood"
                style="@style/ButtonMainFragment"
                android:text="@string/to_mood" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnToWishList"
                android:layout_marginEnd="48dp"
                style="@style/ButtonMainFragment"
                android:text="@string/to_wish_list" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnToDiary"
                android:layout_marginEnd="48dp"
                style="@style/ButtonMainFragment"
                android:text="@string/to_diary" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnToHabits"
                style="@style/ButtonMainFragment"
                android:text="@string/to_habits" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>