<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_registration_block">

    <ImageView
        style="@style/TopStarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/star_ic_content_description"
        app:layout_constraintBottom_toTopOf="@id/topLine"
        app:layout_constraintEnd_toStartOf="@id/label" />

    <TextView
        android:id="@+id/label"
        style="@style/TopLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_registration"
        app:layout_constraintBottom_toTopOf="@id/topLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/topLine"
        style="@style/TopLineBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/regMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:background="@drawable/bg_message"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/helvetica_regular"
        android:gravity="center"
        android:paddingStart="62dp"
        android:paddingTop="70dp"
        android:paddingEnd="62dp"
        android:paddingBottom="70dp"
        android:text="@string/message"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLine" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@+id/regMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:text="@string/btn_enter"
        style="@style/ButtonsOnRegistrationBlock"/>
</androidx.constraintlayout.widget.ConstraintLayout>